--- a/playbooks/roles/setup_snowflake/tasks/snowflake-src.yaml
+++ b/playbooks/roles/setup_snowflake/tasks/snowflake-src.yaml
@@ -4,6 +4,8 @@
     name: snowflake
 
 - name: Init or update Git repo
+  throttle: 16
+  retries: 3
   ansible.builtin.git:
     repo: https://gitlab.torproject.org/tpo/anti-censorship/pluggable-transports/snowflake.git
     dest: /root/snowflake
@@ -13,6 +15,8 @@
     single_branch: true
 
 - name: Apply patches
+  throttle: 16
+  retries: 3
   changed_when: _snowflake_patched.stdout_lines is search('patching file ')
   ansible.builtin.shell:
     cmd: curl -s {{ item }} | patch -p 1
