--- a/playbooks/roles/setup_tor/tasks/metrics.yaml
+++ b/playbooks/roles/setup_tor/tasks/metrics.yaml
@@ -1,5 +1,7 @@
 ---
 - name: Download DDoS metrics script
+  throttle: 32
+  retries: 3
   ansible.builtin.get_url:
     url: "https://github.com/toralf/torutils/raw/main/metrics.sh"
     dest: "/root/metrics.sh"
