--- a/playbooks/roles/setup_common/tasks/kernel.yaml
+++ b/playbooks/roles/setup_common/tasks/kernel.yaml
@@ -12,6 +12,12 @@
       - "linux-image-cloud-{{ (ansible_facts.architecture == 'x86_64') | ternary('amd64', 'arm64') }}"
   notify: "Reboot system"
 
+- name: Remove non-Cloud kernel
+  ansible.builtin.apt:
+    name:
+      - "linux-image-{{ (ansible_facts.architecture == 'x86_64') | ternary('amd64', 'arm64') }}"
+    state: absent
+
 - name: Ensure kernel crash dumps are made to /tmp
   ansible.builtin.cron:
     name: "core debug files"
