use a more robust logic to get the git version

--- a/playbooks/roles/info_tor/tasks/version.yaml
+++ b/playbooks/roles/info_tor/tasks/version.yaml
@@ -19,7 +19,7 @@
   ansible.builtin.shell:
     cmd: |-
       if cd /root/lyrebird 2>/dev/null; then
-        git describe --always
+        git rev-parse --verify HEAD | cut -c -12
       else
         obfs4proxy --version || lyrebird --version
       fi
