new tag: kernel-src

--- a/playbooks/roles/setup_common/tasks/main.yaml
+++ b/playbooks/roles/setup_common/tasks/main.yaml
@@ -94,6 +94,8 @@
         - name: Build kernel from source
           when: kernel_git_version
           ansible.builtin.import_tasks: kernel-src.yaml
+          tags:
+            - kernel-src
 
     - name: CA
       ansible.builtin.import_tasks: ca.yaml
