--- a/playbooks/roles/setup_tor/vars/main.yaml
+++ b/playbooks/roles/setup_tor/vars/main.yaml
@@ -1,5 +1,6 @@
 ---
-# for server specific firewall
+# needed for server b/c they do use the full blown DDoS solution
 _add_remote_service: '{{ (metrics_port and prometheus_server) | ternary(''ADD_REMOTE_SERVICES="'' + prometheus_server + ''>'' + metrics_port + ''"'', '''') }}'
 
+# created by the task "wellknown"
 _my_family: "{{ lookup('ansible.builtin.file', '~/tmp/rsa-fingerprint.txt', errors='ignore') | regex_replace('#.*\n', '') | replace('\n', ',') }}"
