tweak ssh options and shuffle log options to the end

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -5,22 +5,22 @@ forks = 32
 pipelining = True
 strategy = ansible.builtin.free
 
-# timer stats (for debug/profiling)
-# callbacks_enabled=ansible.posix.profile_tasks
-
 gathering = smart
 inject_facts_as_vars = false
 # keep it parseable
 fact_caching = jsonfile
 fact_caching_connection = ./.ansible_facts
 
-# reduce noise
-display_skipped_hosts = false
-
-# would clash with the grep of syslog
-no_target_syslog = True
-
 remote_user = root
 
 # compression is discouraged wrt security aspects
-ssh_args = -o Compression=no -o StrictHostKeyChecking=on
+ssh_args = -o Compression=no -o StrictHostKeyChecking=on -o ControlMaster=auto -o ControlPersist=60s
+
+# reduce noise
+display_skipped_hosts = false
+
+# timer stats (for debug/profiling)
+# callbacks_enabled=ansible.posix.profile_tasks
+
+# would clash with the grep of syslog
+no_target_syslog = True
