rename a task from reboot-or-restart to reboot

--- a/playbooks/roles/setup_common/tasks/main.yaml
+++ b/playbooks/roles/setup_common/tasks/main.yaml
@@ -115,7 +115,7 @@
       tags:
         - auto-update
 
-    - name: Check if service restarts are needed
-      ansible.builtin.import_tasks: reboot-or-restart.yaml
+    - name: Check if reboot is needed
+      ansible.builtin.import_tasks: reboot.yaml
       tags:
-        - reboot-or-restart
+        - reboot
