--- a/playbooks/roles/setup_common/tasks/auto-update.yaml
+++ b/playbooks/roles/setup_common/tasks/auto-update.yaml
@@ -44,4 +44,4 @@
     name: "Reboot if services can't be safely restarted"
     minute: "42"
     hour: "{{ 1 + timer_hour | int }}"
-    job: "if needrestart -r l -b | grep -q 'NEEDRESTART-SVC:'; then reboot; fi"
+    job: "if [[ -s /var/run/reboot-required ]] || needrestart -r l -b | grep -q 'NEEDRESTART-SVC:'; then reboot; fi"
