--- a/playbooks/roles/setup_common/handlers/main.yaml
+++ b/playbooks/roles/setup_common/handlers/main.yaml
@@ -10,11 +10,11 @@
     name: ssh
     state: reloaded
 
-- name: Restart Nginx
-  listen: "Restart Nginx"
+- name: Reload Nginx
+  listen: "Reload Nginx"
   ansible.builtin.systemd_service:
     name: nginx
-    state: restarted
+    state: reloaded
 
 - name: Restart Prometheus node exporter
   listen: "Restart Prometheus node exporter"
