--- a/playbooks/setup.yaml
+++ b/playbooks/setup.yaml
@@ -1,14 +1,15 @@
 ---
 - name: Setup Common
-  hosts: all
+  hosts: "!snowflake:!tor"
   roles:
     - role: setup_common
   tags:
-    - setup
+    - setup-common
 
 - name: Setup Snowflake
   hosts: snowflake
   roles:
+    - role: setup_common
     - role: setup_snowflake
   tags:
     - setup-snowflake
@@ -16,6 +17,7 @@
 - name: Setup Tor
   hosts: tor
   roles:
+    - role: setup_common
     - role: setup_tor
   tags:
     - setup-tor
