--- a/playbooks/roles/setup_common/tasks/kernel-src.yaml
+++ b/playbooks/roles/setup_common/tasks/kernel-src.yaml
@@ -84,6 +84,8 @@
       CONFIG_NETFILTER_XT_NAT=m
       CONFIG_NF_CT_NETLINK=m
       CONFIG_NF_NAT=m
+      #CONFIG_NF_TABLES=m
+      #CONFIG_NFT_COMPAT=m
       CONFIG_NFT_NAT=m
       CONFIG_RD_GZIP=y
       CONFIG_RD_ZSTD=y
