--- a/site-info.yaml
+++ b/site-info.yaml
@@ -2,5 +2,6 @@
 # SPDX-License-Identifier: GPL-3.0-or-later
 
 ---
-- name: Play Info
-  import_playbook: playbooks/info.yaml
+- ansible.builtin.import_playbook: playbooks/info-common.yaml
+- ansible.builtin.import_playbook: playbooks/info-snowflake.yaml
+- ansible.builtin.import_playbook: playbooks/info-tor.yaml
