fix for Debian defaults change to nftables

--- a/playbooks/roles/setup_common/tasks/kernel-src.yaml
+++ b/playbooks/roles/setup_common/tasks/kernel-src.yaml
@@ -74,18 +74,24 @@
       CONFIG_IP6_NF_RAW=m
       CONFIG_IP_NF_FILTER=m
       CONFIG_IP_NF_NAT=m
-      CONFIG_IP_SET_HASH=m
+      CONFIG_IP_SET=m
       CONFIG_IP_SET_HASH_IP=m
       CONFIG_LOCALVERSION=""
       CONFIG_LOCALVERSION_AUTO=y
+      CONFIG_NETFILTER_XT_MATCH_COMMENT=m
       CONFIG_NETFILTER_XT_MATCH_CONNLIMIT=m
+      CONFIG_NETFILTER_XT_MATCH_CONNTRACK=m
       CONFIG_NETFILTER_XT_MATCH_HASHLIMIT=m
+      CONFIG_NETFILTER_XT_MATCH_LIMIT=m
       CONFIG_NETFILTER_XT_MATCH_MULTIPORT=m
+      CONFIG_NETFILTER_XT_MATCH_STATE=m
       CONFIG_NETFILTER_XT_NAT=m
+      CONFIG_NETFILTER_XT_SET=m
+      CONFIG_NF_CONNTRACK=m
       CONFIG_NF_CT_NETLINK=m
       CONFIG_NF_NAT=m
-      #CONFIG_NF_TABLES=m
-      #CONFIG_NFT_COMPAT=m
+      CONFIG_NF_TABLES=m
+      CONFIG_NFT_COMPAT=m
       CONFIG_NFT_NAT=m
       CONFIG_RD_GZIP=y
       CONFIG_RD_ZSTD=y
