hadnle Tor gracefull shutdown time period

--- a/playbooks/roles/setup_common/handlers/main.yaml
+++ b/playbooks/roles/setup_common/handlers/main.yaml
@@ -24,8 +24,8 @@
 
 - name: Reboot system
   listen: "Reboot system"
+  vars:
+    additional_timeout_tor: "{{ tor_port is defined | ternary(30, 0) }}"
   ansible.builtin.reboot:
     connect_timeout: 2
-    reboot_timeout: 65
-    pre_reboot_delay: 0
-    post_reboot_delay: 20
+    reboot_timeout: "{{ 30 + additional_timeout_tor | int }}"
