--- a/playbooks/roles/setup_snowflake/handlers/main.yaml
+++ b/playbooks/roles/setup_snowflake/handlers/main.yaml
@@ -1,5 +1,5 @@
 ---
-- name: Reload systemd
+- name: Reload Systemd
   listen: "Reload Systemd"
   ansible.builtin.systemd_service:
     daemon_reload: true
