--- a/playbooks/roles/setup_tor/tasks/config.yaml
+++ b/playbooks/roles/setup_tor/tasks/config.yaml
@@ -4,6 +4,7 @@
     src: torrc.j2
     dest: /etc/tor/torrc
   notify:
+    - "Restart DDoS"
     - "Reload Tor"
 
 - name: Add Tor logrotate config
