--- a/playbooks/roles/setup_common/defaults/main.yaml
+++ b/playbooks/roles/setup_common/defaults/main.yaml
@@ -19,3 +19,6 @@ firewall_base_config: true
 
 # apt timer schedules, reboot (for deferred service) is made via cron in the following hour
 timer_hour: "{{ 12 | random(seed=inventory_hostname) }}"
+
+# do not wait for kernel being build ?
+fire_and_forget: false
