remove DDoS cronjob if its metrics is not wanted

--- a/playbooks/roles/setup_tor/tasks/firewall-ddos.yaml
+++ b/playbooks/roles/setup_tor/tasks/firewall-ddos.yaml
@@ -18,7 +18,7 @@
     - ipv6-rules.sh
   notify: "Restart DDoS"
 
-- name: Create cron job to start firewall after reboot
+- name: Create cron job to start DDoS after reboot
   ansible.builtin.cron:
     name: "start firewall"
     special_time: reboot
