--- a/playbooks/roles/setup_tor/tasks/metrics.yaml
+++ b/playbooks/roles/setup_tor/tasks/metrics.yaml
@@ -2,6 +2,7 @@
 - name: Download DDoS metrics script
   throttle: 50
   retries: 3
+  when: tor_metrics_ddos
   ansible.builtin.get_url:
     url: "https://github.com/toralf/torutils/raw/main/metrics.sh"
     dest: "/root/metrics.sh"
@@ -11,4 +12,6 @@
 - name: Create cron job to create DDoS metrics
   ansible.builtin.cron:
     name: "DDoS metrics"
-    job: "for i in 0 1 2 3; do /root/metrics.sh 1>/dev/null 2>&1; sleep 14; done"
+    special_time: reboot
+    job: "/root/metrics.sh 1>/dev/null 2>&1"
+    state: "{{ tor_metrics_ddos | ternary('present', 'absent') }}"
