use -legacy of iptables + fix 2 metrics boolean

--- a/playbooks/roles/setup_common/tasks/metrics.yaml
+++ b/playbooks/roles/setup_common/tasks/metrics.yaml
@@ -65,7 +65,7 @@
   notify: "Reload Nginx"
 
 - name: Prometheus node exporter
-  when: node_metrics is true
+  when: node_metrics
   block:
     - name: Install Prometheus node exporter
       ansible.builtin.apt:
