--- a/playbooks/roles/setup_common/defaults/main.yaml
+++ b/playbooks/roles/setup_common/defaults/main.yaml
@@ -14,8 +14,8 @@ prometheus_server: ""
 # store certificates and more
 ssl_dir: "{{ playbook_dir }}/../secrets/ssl"
 
-# false: only iptables package is installed
-firewall_base_config: true
+# Tor server uses a dedicated DDoS solution
+firewall_use_ddos: false
 
 # apt timer schedules, reboot (for deferred service) is made via cron in the following hour
 timer_hour: "{{ 12 | random(seed=inventory_hostname) }}"
